# hwt

./: .coveragerc  .coveralls.yml  .gitignore  .project  .pydevproject  .readthedocs.yml  .travis.yml  MANIFEST.in  README.md  dep.txt  installFromScratch.sh  makeTag.sh  pyproject.toml  renamed_names.txt  runPacpager.py  runTestbenchGen.py  setup.cfg  setup.py  simpyWorkbench.py
.circleci/: config.yml
altium_toolkit/: scheme.py  schemeObjs.py
cli_toolkit/: shortcuts.py  xdcGen.py
cpp_toolkit/: parser.py
doc/: conf.py  gtkwave.rst  hwtCircuitNormalForm.rst  index.rst  requirements.doc.txt  requirements.txt
docs/: conf.py  hwtCircuitNormalForm.rst  index.rst  requirements.txt
examples/: arbiter.vhd
hdl_toolkit/: bitmask.py  formater.py  hdlContext.py  hierarchyExtractor.py  intfLvl.py  parser.py  parserLoader.py  parserUtils.py
hls_toolkit/: README.txt  astTweaker.py  baseSynthesizer.py  baseSynthetisator.py  codeObjs.py  compParser.py  component.py  componentParser.py  debug.py  dep.txt  dep.txt~  errors.py  helpers.py  simpleFsmBuilder.py  syntetizator_config.py  types.py  unparse.py  variable.py  vhdl_serializer.py
hw_toolkit_visualizer/: app.py  connectionsJsonObj.py  dependencyViews.py  hls_connections.py  hls_connections_views.py  wave_views.py
hwt/: bitmask.py  code.py  code_utils.py  constants.py  constraints.py  doc_markers.py  hObjList.py  hwIO.py  hwModule.py  hwParam.py  intfLvl.py  mainBases.py  math.py  mathAutoExt.py  nonRedefDict.py  synth.py
python_toolkit/: arrayQuery.py  bytePlay.py  fileHelpers.py  optCodes.py  parseOptCodes.py  stringUtils.py  unparse.py
samples/: dualportBlockRam.vhd  dualportBlockRam.vhd~
shortcuts/: hierarchy.py  hw_toolkit_cli.py  ipPack.py  lsEntity.py  syntaxCheck.py
src/: helpers.py  iterators.py  models.py  tb_create.py  test.vhd  vhdlParser.py
tcl_toolkit/: vivado.py
tests/: all.py
trash/: componentParser.py  trash.py
vhdl_toolkit/: architecture.py  axiLiteAddrExtractor.py  axi_lite_tb_trans_generator.py  (+31 more)
(+1412 files in other folders)
