[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "hwt"
version = "3.8"
dependencies = [
   "natsort>=8.4.0",  # natural sorting for HDL objects with name
   "hdlConvertorAst>=1.0", # conversions to SystemVerilog, VHDL
   "ipCorePackager>=0.6",  # generator of IPcore packages (IP-xact, ...)
   "hwtSimApi>=1.3",  # simulator API
   "pyDigitalWaveTools>=1.1",  # simulator output dump
]
requires-python = ">=3.8"
authors = [
  {name = "Michal Orsak", email = "Nic30original@gmail.com"},
]

description = "A library for a construction and analysis of digital circuits"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
 'hdl', 'vhdl', 'verilog', 'verilog-hdl', 'systemverilog', 'code-generator', 'ipcore',
 'compiler', 'hardware',  'high-level-synthesis', 'hardware-construction-language' 
]
classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
        "Topic :: System :: Hardware",
        "Topic :: System :: Emulators",
        "Topic :: Utilities"
]


[project.urls]
Homepage = "https://github.com/Nic30/hwt"
Documentation = "http://hwtoolkit.readthedocs.io/en/latest/?badge=latest"
Repository = "https://github.com/Nic30/hwt.git"
"Bug Tracker" = "https://github.com/Nic30/hwt/issues"
